--- a/SpatialWM/SpatialWM.html
+++ b/SpatialWM/SpatialWM.html
@@ -359,28 +359,13 @@
 
         testMessage =
         {
-            "begin": ("<br><h2><u>Spatial Working Memory Test</u></h2><br><br>"),
-            "practice": [
-                         ("<u>Instructions</u><br><br>" +
-                          "Watch the YELLOW and the BLUE squares.<br><br>"),
-                         ("<u>Instructions</u><br><br>" +
+            "begin": ("<br><h2><u>Spatial Working Memory Test</u></h2><br>" +
                           "Were the YELLOW and the BLUE squares in the same place?<br><br>" +
                           "When the place is the same, press the <font color='green'>  <b>'s'</b> </font> key.<br>" +
                           "When the place is different, press the <font color='red'>  <b>'d'</b> </font>key.<br><br>" +
                           "Let's try.<br><br>"),
-                         ("<u>Instructions</u><br><br>" +
-                          "Now watch the YELLOW square move.<br>" +
-                          "Then watch the BLUE square move.<br><br>"),
-                         ("<u>Instructions</u><br><br>" +
-                          "Were the the YELLOW and the BLUE squares in the same places?<br><br>" +
-                          "When the places are the same, press the <font color='green'>  <b>'s'</b> </font> key.<br>" +
-                          "When the places are different, press the <font color='red'>  <b>'d'</b> </font> key.<br><br>" +
-                          "Let's try.<br><br>"),
-                         ("<br>Well done!<br>" +
-                          "Let's do some more practice.<br><br>" +
-                          "When the places are the same, press the  <font color='green'>  <b>'s'</b> </font>key.<br>" +
-                          "When the places are different, press the <font color='red'>  <b>'d'</b> </font> key.<br><br>")
-                        ],
+            "practice": [("When the places are the same, press the <font color='green'><b>'s'</b></font> key.<br>" +
+                          "When the places are different, press the <font color='red'><b>'d'</b> </font> key.<br><br>")],
             "test": ("<br>Excellent!<br>" +
                      "You have completed the practice.<br><br>" +
                      "Now let's do more.<br><br>")
@@ -389,22 +374,22 @@
         // Practice sequence
 
         // type of frame to display
-        var frameType = ["begin","message","example","message","practice",
-                         "message","example","message","practice",
-                         "message","practice","practice","practice","practice","practice","practice",
-                         "message"];
+        var frameType = ["begin","practice","message","practice",
+                         "message","practice","message","practice",
+                         "message","practice","practice","practice",
+                         "practice","practice","practice", "message"];
 
         // message to display
-        var frameMessage = [testMessage.begin,testMessage.practice[0],"",testMessage.practice[1],"",
-                            testMessage.practice[2],"",testMessage.practice[3],"",
-                            testMessage.practice[4],"","","","","","",
-                            testMessage.test];
+        var frameMessage = [testMessage.begin,"",testMessage.practice[0],"",
+                            testMessage.practice[0],"",testMessage.practice[0],"",
+                            testMessage.practice[0],"","","",
+                            "","","",testMessage.test];
 
         // number of targets
-        var frameCapacity = [0,0,1,0,1,
+        var frameCapacity = [0,1,0,1,
                              0,2,0,2,
-                             0,2,2,2,2,3,3,
-                             0];
+                             0,2,2,2,
+                             2,3,3,0];
 
         // same or different
         var frameSameDiff = ["","","different","","same",
@@ -476,6 +461,7 @@
         // determine events to listen to
         tmbUI.UIevents = ['keys'];
         tmbUI.timeout = 60000;
+        tmbUI.keys = [32,78,90];
 
         // set the random generator's seed
         Math.seedrandom("SpatialWM");
@@ -511,7 +497,7 @@
 
     function callTimeOutDisplay () {
             showCursor("document.body");
-            //tmbSubmitToServer(results, score);
+            tmbSubmitToServer(results, score);
             showAlert("<br> All Done!")
      }
     
