--- a/SpatialWM/SpatialWM.html
+++ b/SpatialWM/SpatialWM.html
@@ -227,7 +227,7 @@
                     }
                     else
                     {
-                        showAlert("<br>Press any key to continue",
+                        showAlert("<br>Press SPACEBAR to continue",
                                 "space",
                                 "nextTrial()");
                     }
