--- a/SpatialWM/SpatialWM.html
+++ b/SpatialWM/SpatialWM.html
@@ -209,7 +209,7 @@
                 // else advance to the next trial
                 else
                 {
-                    showAlert("Press the SPACEBAR to continue",
+                    showAlert("<br><br>Press the SPACEBAR to continue",
                               "space",
                               "nextTrial()");
                 }
@@ -228,7 +228,7 @@
                     }
                     else
                     {
-                        showAlert("<br>Press SPACEBAR to continue",
+                        showAlert("<br><br>Press SPACEBAR to continue",
                                 "space",
                                 "nextTrial()");
                     }
